# agents_advanced_course

./: .gitignore  README.html  README.md
artifacts_managment/: pyproject.toml
artifacts_managment/paper_writer_agent/: agent.py
bulding_agent_adk/: .gitignore  README.md  call_agent.http  download_db.sh  pyproject.toml  tools.py
bulding_agent_adk/sql_assistant_agent/: agent.py  models_list.py
bulding_agent_from_scratch/: loop_agent.py  memory.py  pyproject.toml  simple_agent.py
human_in_the_loop/: approve_requests.py  basic_human_in_loop_impl.py  blocking_example.py  blocking_example2.py  main.py  pyproject.toml  submit_requests.py
human_in_the_loop/blocking_human_in_the_loop/hr_agent/: agent.py  evalset4dc641.evalset.json
human_in_the_loop/non_blocking_human_in_the_loop/: approve_requests.py  submit_requests.py
